tests/variables/errors/var_not_declared.c
int main()
{
    a = 23.2;
    return 0;
}